--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/CustomNoActionBarTheme">
-        <activity android:name=".BaseActivity"></activity>
+        <activity android:name=".activities.SetUpActivity"></activity>
+        <activity android:name=".BaseActivity" />
         <activity android:name=".ForgotPasswordActivity" />
         <activity android:name=".LogInActivity" />
         <activity android:name=".SignUpActivity" />
