--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/CustomNoActionBarTheme">
+        <activity android:name=".activities.AccountSettingsActivity"></activity>
         <activity android:name=".activities.MyProfileActivity" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
@@ -33,19 +34,19 @@
             android:value="@string/google_maps_key" />
 
         <activity android:name=".activities.SetUpActivity" />
-        <activity android:name=".BaseActivity" />
-        <activity android:name=".ForgotPasswordActivity" />
-        <activity android:name=".LogInActivity" />
-        <activity android:name=".SignUpActivity" />
-        <activity android:name=".IntroActivity" />
-        <activity android:name=".SplashActivity">
+        <activity android:name=".activities.BaseActivity" />
+        <activity android:name=".activities.ForgotPasswordActivity" />
+        <activity android:name=".activities.LogInActivity" />
+        <activity android:name=".activities.SignUpActivity" />
+        <activity android:name=".activities.IntroActivity" />
+        <activity android:name=".activities.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity" />
+        <activity android:name=".activities.MainActivity" />
     </application>
 
 </manifest>
