Created functionality to create a board, assign information to the board, uplaod the board information to Google Firestore and all boards the user created is then populated in a recycler view on the main activity.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/CustomNoActionBarTheme">
-        <activity android:name=".activities.AccountSettingsActivity"></activity>
+        <activity android:name=".activities.TaskListActivity"></activity>
+        <activity android:name=".activities.CreateBoardActivity" />
+        <activity android:name=".activities.AccountSettingsActivity" />
         <activity android:name=".activities.MyProfileActivity" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
