--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,4 +75,7 @@ dependencies {
     // Glide
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+
+    // Android Photo Shop Color Picker
+    implementation 'com.azeesoft.lib.colorpicker:colorpicker:1.0.8@aar'
 }
